zia first upload

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 -->
   <body>
     <div id="page-wraper">
+
       <!-- Sidebar Menu -->
       <div class="responsive-nav">
         <i class="fa fa-bars" id="menu-toggle"></i>
@@ -47,7 +48,7 @@
               </ul>
             </nav>
             <div class="social-network">
-              <ul class="soial-icons">
+              <ul class="social-icons">
                 <li>
                   <a href="#"><i class="fa fa-facebook"></i></a>
                 </li>
@@ -55,10 +56,6 @@
                   <a href="#"><i class="fa fa-instagram"></i></a>
                 </li>
               </ul>
-            </div>
-            <div class="copyright-text">
-              <p>Copyright 2022 New Mexico Zia<br>
-              </p>
             </div>
           </div>
         </div>
