zia first upload

--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
               <a href="#"><img src="../Zia-Volleyball/zia/assets/images/zia.png" alt="Blugoon by Tooplate" /></a>
             </div>
             <div class="author-content">
-              <h4>New Mexico Zia</h4>
-              <span>Professional Volleyball Team</span>
+              <h4>New Mexico Zia </h4>
+              <span> Professional Volleyball Team</span>
             </div>
             <nav class="main-nav" role="navigation">
               <ul class="main-menu">
-                <li><a href="#section1">About Us</a></li>
+                <li><a href="#section1">About </a></li>
                 <li><a href="#section2">Teams</a></li>
                 <li><a href="#section3">Gallery</a></li>
                 <li><a href="#section4">Contact</a></li>
@@ -53,7 +53,7 @@
                   <a href="#"><i class="fa fa-facebook"></i></a>
                 </li>
                 <li>
-                  <a href="#"><i class="fa fa-instagram"></i></a>
+                  <a href="##"><i class="fa fa-instagram"></i></a>
                 </li>
               </ul>
             </div>
@@ -78,10 +78,10 @@
               <div class="col-md-8">
                 <div class="left-text">
                   <h4>New Mexico Zia</h4>
-                  <p> New Mexico Zia will have a men's tier 2 team and a women's tier 2 team. We will have a coaching staff and a practice facility.
+                  <p> New Mexico Zia will have a men's "tier 2" team and a women's "tier 2" team. We will have a coaching staff and a practice facility.
                     We will have at least two practices a week that works for the team. You will have complete access to a lifting gym and volleyball courts.
-                    We will run under the AAU non-profit organization for insurance and fundraising benefits it provides. THe goal is to get to a
-                    tier 1 one team with enough points and get everyone a paid athlete. This team does not cost you anything to participate. It will just be travel if
+                    We will run under the AAU non-profit organization for insurance and fundraising benefits it provides. The goal is to get to a
+                    tier 1 one team with enough points so everyone becomes a paid athlete. This team does not cost you anything to participate. It will just be travel if
                     we do not fundraise enough.
                   </p>
                 </div>
@@ -201,13 +201,31 @@
                     <th scope="row">6'1"</th>
                     <td>Bryan</td>
                     <td>Klein</td>
-                    <td>OS/Setter/Libero</td>
+                    <td>OH/Setter/Libero</td>
                   </tr>
                   <tr>
                     <th scope="row">5'7"</th>
                     <td>Zachary </td>
                     <td>Hunt</td>
                     <td>Setter/Libero</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">6'4"</th>
+                    <td>Isaiah</td>
+                    <td>Bradford</td>
+                    <td>OH/M</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5'8"</th>
+                    <td>Aaron</td>
+                    <td>Lopez</td>
+                    <td>Setter/td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5'7"</th>
+                    <td>Taylor</td>
+                    <td>Begay</td>
+                    <td>OH/S</td>
                   </tr>
                   </tbody>
                 </table>
@@ -232,10 +250,22 @@
                   </thead>
                   <tbody>
                   <tr>
-                    <th scope="row">5'7"</th>
+                    <th scope="row">5'8"</th>
                     <td>Norma</td>
                     <td>Lopez</td>
                     <td>OS/DS</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5'10"</th>
+                    <td>Madi</td>
+                    <td>Haas</td>
+                    <td>OH</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5'4"</th>
+                    <td>Isabella</td>
+                    <td>Perea</td>
+                    <td>Libero</td>
                   </tr>
                   </tbody>
                 </table>
