Justin T updated of players

--- a/index.html
+++ b/index.html
@@ -173,6 +173,9 @@
                 <h4>New Mexico Zia Mens Volleyball Tryouts</h4>
                 <p>Tier 2</p>
                 <p>
+                  25 space limit
+                </p>
+                <p>
                   Tryout Out Entries
                 </p>
                 <table class="table">
@@ -233,6 +236,24 @@
                     <td>Sanchez</td>
                     <td>S/Libero</td>
                   </tr>
+                  <tr>
+                    <th scope="row">6'3"</th>
+                    <td>Sunni</td>
+                    <td>Bates</td>
+                    <td>Libero</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5'10"</th>
+                    <td>Jesse</td>
+                    <td>Saybders</td>
+                    <td>OH</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5'7"</th>
+                    <td>Justin</td>
+                    <td>Troncosa</td>
+                    <td>S/Libero</td>
+                  </tr>
                   </tbody>
                 </table>
               </div>
@@ -242,6 +263,9 @@
                 <i class="fa fa-clipboard"></i>
                 <h4>New Mexico Zia Women's Volleyball Tryouts</h4>
                 <p>Tier 2</p>
+                <p>
+                  25 space limit
+                </p>
                 <p>
                   Tryout Out Entries
                 </p>
