Aubrey Searle update

--- a/index.html
+++ b/index.html
@@ -254,6 +254,24 @@
                     <td>Troncosa</td>
                     <td>S/Libero</td>
                   </tr>
+                  <tr>
+                    <th scope="row">5'7"</th>
+                    <td>Grant </td>
+                    <td>Squier</td>
+                    <td>Libero/S</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">6'0"</th>
+                    <td>Nathan </td>
+                    <td>delgado</td>
+                    <td>OH/M</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5'10"</th>
+                    <td>Eli</td>
+                    <td>Harden</td>
+                    <td>OPP/S</td>
+                  </tr>
                   </tbody>
                 </table>
               </div>
@@ -295,6 +313,12 @@
                     <th scope="row">5'4"</th>
                     <td>Isabella</td>
                     <td>Perea</td>
+                    <td>Libero</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5'4"</th>
+                    <td>Aubrey</td>
+                    <td>Searle</td>
                     <td>Libero</td>
                   </tr>
                   </tbody>
