--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                   <tr>
                     <th scope="row">5'10"</th>
                     <td>Jesse</td>
-                    <td>Saybders</td>
+                    <td>Saunders</td>
                     <td>OH</td>
                   </tr>
                   <tr>
@@ -271,6 +271,18 @@
                     <td>Eli</td>
                     <td>Harden</td>
                     <td>OPP/S</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5'8"</th>
+                    <td>Jonathan</td>
+                    <td>Zamorano</td>
+                    <td>S</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5'8"</th>
+                    <td>Jonathan</td>
+                    <td>Zamorano</td>
+                    <td>S</td>
                   </tr>
                   </tbody>
                 </table>
@@ -319,7 +331,25 @@
                     <th scope="row">5'4"</th>
                     <td>Aubrey</td>
                     <td>Searle</td>
+                    <td>Libero/S</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5'1"</th>
+                    <td>Mikayla</td>
+                    <td>Padilla</td>
                     <td>Libero</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5'9"</th>
+                    <td>Jessica</td>
+                    <td>Vestal</td>
+                    <td>OH/M</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5'4"</th>
+                    <td>Victoria</td>
+                    <td>Corvin</td>
+                    <td>S</td>
                   </tr>
                   </tbody>
                 </table>
