--- a/index.html
+++ b/index.html
@@ -284,6 +284,24 @@
                     <td>Zamorano</td>
                     <td>S</td>
                   </tr>
+                  <tr>
+                    <th scope="row">6'4"</th>
+                    <td>Patrick</td>
+                    <td>Walker</td>
+                    <td>M</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5'7"</th>
+                    <td>Derek</td>
+                    <td>Enriquez</td>
+                    <td>Libero</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5'10"</th>
+                    <td>Leon</td>
+                    <td>Garcia</td>
+                    <td>OH/OPP</td>
+                  </tr>
                   </tbody>
                 </table>
               </div>
@@ -350,6 +368,36 @@
                     <td>Victoria</td>
                     <td>Corvin</td>
                     <td>S</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5'7"</th>
+                    <td>Alilee</td>
+                    <td>Garcia</td>
+                    <td>OH/DS</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5'6"</th>
+                    <td>Mikaela</td>
+                    <td>Ashley</td>
+                    <td>OH/M</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5'7"</th>
+                    <td>Jessie</td>
+                    <td>Diehl</td>
+                    <td>Libero</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5'11"</th>
+                    <td>Ashley</td>
+                    <td>Newman</td>
+                    <td>OH/Mb</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5'7"</th>
+                    <td>Audra</td>
+                    <td>Gentry</td>
+                    <td>OH</td>
                   </tr>
                   </tbody>
                 </table>
