--- a/index.html
+++ b/index.html
@@ -393,6 +393,18 @@
                     <td>Gentry</td>
                     <td>OH</td>
                   </tr>
+                  <tr>
+                    <th scope="row">5'2"</th>
+                    <td>Melody</td>
+                    <td>Mohammadzadeh</td>
+                    <td>Libero/S</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5'5"</th>
+                    <td>Shauna</td>
+                    <td>Wilkins</td>
+                    <td>Outside/Rightside</td>
+                  </tr>
                   </tbody>
                 </table>
 
