--- a/index.html
+++ b/index.html
@@ -176,6 +176,9 @@
                   25 space limit
                 </p>
                 <p>
+                  Check back to make sure you have been added to the list
+                </p>
+                <p>
                   Tryout Out Entries
                 </p>
                 <table class="table">
@@ -307,6 +310,9 @@
                 <p>Tier 2</p>
                 <p>
                   25 space limit
+                </p>
+                <p>
+                  Check back to make sure you have been added to the list
                 </p>
                 <p>
                   Tryout Out Entries
