--- a/index.html
+++ b/index.html
@@ -299,6 +299,12 @@
                     <td>Garcia</td>
                     <td>OH/OPP</td>
                   </tr>
+                  <tr>
+                    <th scope="row">5'10"</th>
+                    <td>Kerry</td>
+                    <td>Harrison</td>
+                    <td>S</td>
+                  </tr>
                   </tbody>
                 </table>
               </div>
