--- a/index.html
+++ b/index.html
@@ -229,12 +229,6 @@
                   </tr>
                   <tr>
                     <th scope="row">5'7"</th>
-                    <td>Taylor</td>
-                    <td>Begay</td>
-                    <td>OH/S</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">5'10"</th>
                     <td>Ricardo</td>
                     <td>Sanchez</td>
                     <td>S/Libero</td>
@@ -304,6 +298,42 @@
                     <td>Kerry</td>
                     <td>Harrison</td>
                     <td>S</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">6'2"</th>
+                    <td>Brody</td>
+                    <td>Wade</td>
+                    <td>/OPP</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">6'2"</th>
+                    <td>Brody</td>
+                    <td>Wade</td>
+                    <td>M/OPP</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5'10"</th>
+                    <td>Ramsey</td>
+                    <td>Kane</td>
+                    <td>DS/L/S</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">6'1"</th>
+                    <td>Isaiah</td>
+                    <td>Mejia</td>
+                    <td>OH</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5'8"</th>
+                    <td>Dominic</td>
+                    <td>Lopez</td>
+                    <td>libero/DS</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">6'3"</th>
+                    <td>Andres</td>
+                    <td>Montes</td>
+                    <td>M/OH</td>
                   </tr>
                   </tbody>
                 </table>
@@ -416,6 +446,36 @@
                     <td>Shauna</td>
                     <td>Wilkins</td>
                     <td>Outside/Rightside</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5'7"</th>
+                    <td>Taylor</td>
+                    <td>Begay</td>
+                    <td>OH/S</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5'9"</th>
+                    <td>Sarah</td>
+                    <td>Carrillo</td>
+                    <td>S/OPP</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5'4"</th>
+                    <td>Judith</td>
+                    <td>Flores</td>
+                    <td>Libero/DS</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5'4"</th>
+                    <td>Aylin</td>
+                    <td>Villalobos</td>
+                    <td>Libero/DS</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5'7"</th>
+                    <td>Ashley</td>
+                    <td>Ottmann</td>
+                    <td>M/Oh/DS</td>
                   </tr>
                   </tbody>
                 </table>
