--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                   <a href="#"><i class="fa fa-facebook"></i></a>
                 </li>
                 <li>
-                  <a href="##"><i class="fa fa-instagram"></i></a>
+                  <a href="https://www.instagram.com/ziavolleyball/"><i class="fa fa-instagram"></i></a>
                 </li>
               </ul>
             </div>
@@ -304,12 +304,6 @@
                     <td>Brody</td>
                     <td>Wade</td>
                     <td>/OPP</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">6'2"</th>
-                    <td>Brody</td>
-                    <td>Wade</td>
-                    <td>M/OPP</td>
                   </tr>
                   <tr>
                     <th scope="row">5'10"</th>
