--- a/index.html
+++ b/index.html
@@ -329,6 +329,18 @@
                     <td>Montes</td>
                     <td>M/OH</td>
                   </tr>
+                  <tr>
+                    <th scope="row">6'1"</th>
+                    <td>Rube</td>
+                    <td>Lujan</td>
+                    <td>OH/OPP/M</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">6'1"</th>
+                    <td>Rube</td>
+                    <td>Lujan</td>
+                    <td>OH/OPP/M</td>
+                  </tr>
                   </tbody>
                 </table>
               </div>
@@ -470,6 +482,12 @@
                     <td>Ashley</td>
                     <td>Ottmann</td>
                     <td>M/Oh/DS</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5'6"</th>
+                    <td>Breana</td>
+                    <td>Delgado</td>
+                    <td>M/OH/DS</td>
                   </tr>
                   </tbody>
                 </table>
