--- a/index.html
+++ b/index.html
@@ -149,6 +149,9 @@
                 <p>
                   Please email us your Full Name, Height, Positions, Email, Phone Number and Age.
                 </p>
+                <p>
+                  Instagram/Facebook is now live for more updates and info - @Ziavolleyball
+                </p>
 
                 <a href="mailto:nmziavolleyball@gmail.com" class="btn btn-info" role="button">Email Us</a>
               </div>
@@ -163,6 +166,9 @@
                 </p>
                 <p>
                   Please email us your Full Name, Height, Positions, Email, Phone Number and Age.
+                </p>
+                <p>
+                  Instagram/Facebook is now live for more updates and info - @Ziavolleyball
                 </p>
                 <a href="mailto:nmziavolleyball@gmail.com" class="btn btn-info" role="button">Email Us</a>
               </div>
@@ -201,7 +207,7 @@
                     <th scope="row">6'</th>
                     <td>Christian</td>
                     <td>Martinez</td>
-                    <td>OPP/Setter</td>
+                    <td>OPP/Setter/OH</td>
                   </tr>
                   <tr>
                     <th scope="row">6'1"</th>
