--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                   <img src="assets/images/Tier%202.jpg" alt="Nature Girl" />
                 </div>
               </div>
-              
+
               <div class="col-md-8">
                 <div class="right-text">
                   <h4>About the VLA </h4>
@@ -110,7 +110,6 @@
                     Tier 2 just like to play competitive volleyball and have no interest in advancing towards Tier 1.  It is completely up to the organization.</p>
                 </div>
               </div>
-              
             </div>
           </div>
         </div>
@@ -127,14 +126,14 @@
             <div class="col-md-6">
               <div class="service-item">
                 <i class="fa fa-trophy"></i>
-                <h4>New Mexico Zia Mens Team </h4>
+                <h4>New Mexico Zia Mens Volleyball Team </h4>
                 <p> Tier 2</p>
               </div>
             </div>
             <div class="col-md-6">
               <div class="service-item">
                 <i class="fa fa-trophy"></i>
-                <h4>New Mexico Zia Women's Team</h4>
+                <h4>New Mexico Zia Women's Volleyball Team</h4>
                 <p>Tier 2</p>
               </div>
             </div>
@@ -144,7 +143,7 @@
                 <h4>New Mexico Zia Mens Volleyball Tryouts</h4>
                 <p>Tier 2</p>
                 <p>
-                  Tryouts will be $20 cash at the door and will go from 12-3 pm on December 31st
+                  Tryouts will be $20 cash at the door and will go from 10:30am - 12:30pm on December 31st
                 </p>
                 <p>
                   Please email us your Full Name, Height, Positions, Email, Phone Number and Age.
@@ -162,7 +161,7 @@
                 <h4>New Mexico Zia Women's Volleyball Tryouts</h4>
                 <p>Tier 2</p>
                 <p>
-                  Tryouts will be $20 cash at the door and will go from 12-3 pm on December 31st
+                  Tryouts will be $20 cash at the door and will go from 1pm - 3pm on December 31st
                 </p>
                 <p>
                   Please email us your Full Name, Height, Positions, Email, Phone Number and Age.
@@ -176,10 +175,13 @@
             <div class="col-md-6">
               <div class="service-item">
                 <i class="fa fa-clipboard"></i>
-                <h4>New Mexico Zia Mens Volleyball Tryouts</h4>
-                <p>Tier 2</p>
+                <h4>New Mexico Zia Mens Volleyball Tryouts News</h4>
+                <p class="font-weight-bold">Tier 2 (Updated 12/21/22)</p>
                 <p>
-                  25 space limit
+                  Tryout Time 10:30am - 12:30pm. Please arrive early to check in pay and warm up
+                </p>
+                <p>
+                 35 athletes total (space limit)
                 </p>
                 <p>
                   Check back to make sure you have been added to the list
@@ -341,6 +343,24 @@
                     <td>Lujan</td>
                     <td>OH/OPP/M</td>
                   </tr>
+                  <tr>
+                    <th scope="row">6'1"</th>
+                    <td>James</td>
+                    <td>Begay</td>
+                    <td>OH/S/<td>
+                  </tr>
+                  <tr>
+                    <th scope="row">6'4"</th>
+                    <td>Stewart</td>
+                    <td>Weadock</td>
+                    <td>OH/OPP/S/Libero</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">6'1"</th>
+                    <td>Landon</td>
+                    <td>Fontaine</td>
+                    <td>OH</td>
+                  </tr>
                   </tbody>
                 </table>
               </div>
@@ -348,10 +368,13 @@
             <div class="col-md-6">
               <div class="service-item">
                 <i class="fa fa-clipboard"></i>
-                <h4>New Mexico Zia Women's Volleyball Tryouts</h4>
-                <p>Tier 2</p>
+                <h4>New Mexico Zia Women's Volleyball Tryouts News</h4>
+                <p class="font-weight-bold">Tier 2 (Updated 12/21/22) </p>
                 <p>
-                  25 space limit
+                  Tryout Time 10:30am - 12:30pm. Please arrive early to check in pay and warm up
+                </p>
+                <p>
+                 35 athletes total (space limit)
                 </p>
                 <p>
                   Check back to make sure you have been added to the list
@@ -488,6 +511,78 @@
                     <td>Breana</td>
                     <td>Delgado</td>
                     <td>M/OH/DS</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">6'0"</th>
+                    <td>Jackie</td>
+                    <td>Carlise</td>
+                    <td>OPP/M</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5'9"</th>
+                    <td>Amaya</td>
+                    <td>Strauss</td>
+                    <td>Libero</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">6'1"</th>
+                    <td>Kierra</td>
+                    <td>Hoover</td>
+                    <td>OH/DS/MB</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5'11"</th>
+                    <td>Ashley</td>
+                    <td>Kelsey</td>
+                    <td>Libero</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5'9"</th>
+                    <td>Hayley</td>
+                    <td>Torres</td>
+                    <td>OH/libero</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5'7"</th>
+                    <td>Marissa</td>
+                    <td>Lopez</td>
+                    <td>OH/S</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5'6"</th>
+                    <td>Elise</td>
+                    <td>Medina</td>
+                    <td>S/DS</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5'5"</th>
+                    <td>Alexa</td>
+                    <td>Alvillar</td>
+                    <td> OH/M/DS</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5'11"</th>
+                    <td>Ashley</td>
+                    <td>DeMarco</td>
+                    <td>MB</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5'2"</th>
+                    <td>Linnea</td>
+                    <td>Romero</td>
+                    <td>Libero</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5'0"</th>
+                    <td>Emi</td>
+                    <td>Nakasone</td>
+                    <td>Libero</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5'9"</th>
+                    <td>Portia</td>
+                    <td>Bryce</td>
+                    <td>S/OPP</td>
                   </tr>
                   </tbody>
                 </table>
