--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                 <h4>New Mexico Zia Women's Volleyball Tryouts News</h4>
                 <p class="font-weight-bold">Tier 2 (Updated 12/21/22) </p>
                 <p>
-                  Tryout Time 10:30am - 12:30pm. Please arrive early to check in pay and warm up
+                  Tryout Time 1:00 pm - 3:00 pm. Please arrive early to check in pay and warm up
                 </p>
                 <p>
                  35 athletes total (space limit)
