--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                     <th scope="row">5'8"</th>
                     <td>Aaron</td>
                     <td>Lopez</td>
-                    <td>Setter/td>
+                    <td>Setter</td>
                   </tr>
                   <tr>
                     <th scope="row">5'7"</th>
