--- a/index.html
+++ b/index.html
@@ -209,13 +209,13 @@
                     <th scope="row">6'</th>
                     <td>Christian</td>
                     <td>Martinez</td>
-                    <td>OPP/Setter/OH</td>
+                    <td>OPP/OH</td>
                   </tr>
                   <tr>
                     <th scope="row">6'1"</th>
                     <td>Bryan</td>
                     <td>Klein</td>
-                    <td>OH/Setter/Libero</td>
+                    <td>OH/Setter/OPP/Libero</td>
                   </tr>
                   <tr>
                     <th scope="row">5'7"</th>
@@ -344,7 +344,7 @@
                     <td>OH/OPP/M</td>
                   </tr>
                   <tr>
-                    <th scope="row">6'1"</th>
+                    <th scope="row">5'9"</th>
                     <td>James</td>
                     <td>Begay</td>
                     <td>OH/S/<td>
@@ -359,6 +359,36 @@
                     <th scope="row">6'1"</th>
                     <td>Landon</td>
                     <td>Fontaine</td>
+                    <td>OH</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">6'3"</th>
+                    <td>Trition</td>
+                    <td>Nelson</td>
+                    <td>OH/OPP</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">6'1"</th>
+                    <td>Isaac</td>
+                    <td>Carrillo</td>
+                    <td>OH</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5'6"</th>
+                    <td>Anthony</td>
+                    <td>Abeyta</td>
+                    <td>Libero</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">6'3"</th>
+                    <td>Ben</td>
+                    <td>Hwang</td>
+                    <td>OH</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5'9"</th>
+                    <td>Elias</td>
+                    <td>Dominguez</td>
                     <td>OH</td>
                   </tr>
                   </tbody>
@@ -525,7 +555,7 @@
                     <td>Libero</td>
                   </tr>
                   <tr>
-                    <th scope="row">6'1"</th>
+                    <th scope="row">5'2"</th>
                     <td>Kierra</td>
                     <td>Hoover</td>
                     <td>OH/DS/MB</td>
@@ -583,6 +613,12 @@
                     <td>Portia</td>
                     <td>Bryce</td>
                     <td>S/OPP</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5'2"</th>
+                    <td>Laura</td>
+                    <td>Guerrero</td>
+                    <td>M/S</td>
                   </tr>
                   </tbody>
                 </table>
