--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
           <i class="fa fa-times" id="menu-close"></i>
           <div class="container">
             <div class="image">
-              <a href="#"><img src="assets/images/zia.png" alt="Blugoon by Tooplate" /></a>
+              <a href="#"><img src="assets/images/zialogo.jpg" alt="Blugoon by Tooplate" /></a>
             </div>
             <div class="author-content">
               <h4>New Mexico Zia </h4>
-              <span> Professional Volleyball Team</span>
+              <span> Professional  Indoor Volleyball Team</span>
             </div>
             <nav class="main-nav" role="navigation">
               <ul class="main-menu">
@@ -61,13 +61,34 @@
         </div>
       </div>
 
+
       <section class="section about-me" data-section="section1">
         <div class="container">
         <div class="top-header">
         	<img src="assets/images/Vla%20logo.jpg" alt="aerobic girls" />
         </div>
           <div class="section-heading">
-          
+
+            <section>
+              <div class="container">
+                <div class="section-heading">
+                  <h2>News Updates</h2>
+                  <div class="line-dec"></div>
+                  <span><strong>12/28/2022 </strong> </span>
+                  <p></p>
+                  <span><strong>Tryouts </strong> </span>
+                  <p>
+                    2 spots left for each gender!
+                  </p>
+                  <span><strong>Rosters </strong> </span>
+                  <p>
+                    15 spots per gender
+                  </p>
+                  <img class="aau" src="assets/images/AAU logo.jpg" alt="aau"/>
+                </div>
+              </div>
+            </section>
+
             <h2>Introducing New Mexico Zia</h2>
             <div class="line-dec"></div>
             <span>New Mexico First Men's and Women's professional volleyball team.</span>
@@ -391,6 +412,12 @@
                     <td>Dominguez</td>
                     <td>OH</td>
                   </tr>
+                  <tr>
+                    <th scope="row">5'9"</th>
+                    <td>Richard</td>
+                    <td>Ortiz</td>
+                    <td>OH</td>
+                  </tr>
                   </tbody>
                 </table>
               </div>
@@ -649,9 +676,9 @@
               <div class="isotope-box">
                 <div class="isotope-item" data-type="beach">
                   <figure class="snip1321">
-                    <img src="assets/images/zia.png" alt="zia" />
+                    <img src="assets/images/zialogo.jpg" alt="zia" />
                     <figcaption>
-                      <a href="assets/images/zia.png"
+                      <a href="assets/images/zialogo.jpg"
                         data-lightbox="image-1"
                         data-title="Caption"><i class="fa fa-search"></i></a>
                       <h4>NM ZIA</h4>
@@ -739,7 +766,7 @@
                         <ul class="list-unstyled mb-0">
 
                           <li><i class="fa fa-map-marker fa-2x"></i>
-                            <p>Albuquerque, New Mexico 87048</p>
+                            <p>325 Academy Dr, Corrales NM Albuquerque, New Mexico 87048</p>
                           </li>
 
                           <li><i class="fa fa-phone mt-4 fa-2x"></i>
