--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                     15 spots per gender
                   </p>
                   <img class="aau" src="assets/images/AAU logo.jpg" alt="aau"/>
+                  <img class="aau" src="assets/images/ziainfo.jpg" alt="aau"/>
                 </div>
               </div>
             </section>
@@ -646,6 +647,24 @@
                     <td>Laura</td>
                     <td>Guerrero</td>
                     <td>M/S</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5'5"</th>
+                    <td>Carolina</td>
+                    <td>Ayala</td>
+                    <td>S/OPP</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5'5"</th>
+                    <td>Martha</td>
+                    <td>Gandarilla</td>
+                    <td>OH/M</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5'4"</th>
+                    <td>Valynn</td>
+                    <td>Nez</td>
+                    <td>S/OH/Libero</td>
                   </tr>
                   </tbody>
                 </table>
